Change button verbiage and link.

--- a/app/views/widgets/home_page/_graduate_admission.html
+++ b/app/views/widgets/home_page/_graduate_admission.html
@@ -6,7 +6,7 @@
     </div>
     <div class="second">
       <div class="actions" data-bottom="opacity:0;" data-center="opacity:1;">
-        <a class="button red apply smc-cta skrollable skrollable-after" data-cta-id="homepage-grad-admv" data--100-bottom="opacity:1" data-bottom="opacity:0" href="http://www.chapman.edu/admission/graduate/applynow.aspx" style="opacity: 1;">Apply to a Graduate Program Today</a>
+        <a class="button red apply smc-cta skrollable skrollable-after" data-cta-id="homepage-grad-admv" data--100-bottom="opacity:1" data-bottom="opacity:0" href="http://www.chapman.edu/academics/degrees-and-programs.aspx?startingtab=4" style="opacity: 1;">View a List of Graduate Programs</a>
       </div>
     </div>
   </div>
