Update heading/subheading margin for Gen Info and Graduate Admission.

--- a/app/assets/stylesheets/widgets/home_page/general_info.scss
+++ b/app/assets/stylesheets/widgets/home_page/general_info.scss
@@ -11,9 +11,9 @@
 }
 
 @media only screen and (min-width: 680px) {
-  .homepage {
+  #generalInformation { 
     .heading {
-      margin: 0 50px;
+      margin: 0 50px 15px;
     }
   }
 }
