add comments to shared contents; add 3rd version for one with social follow us icons

--- a/app/views/widgets/left_column/_shared_content_contacts_1.html
+++ b/app/views/widgets/left_column/_shared_content_contacts_1.html
@@ -1,3 +1,4 @@
+<!--- this version has the optional Individual Contacts at the bottom --->
 <div class="callout-box-widget--left callout">
 	<div class="border"> </div>
     <h2>Contact Information</h2>
