--- a/app/views/2_column/sample.html.erb
+++ b/app/views/2_column/sample.html.erb
@@ -21,6 +21,7 @@
     - primary_content/wysiwyg_anchor_links
 
   left_column:
+    - left_column/_shared_content_contacts_2.html
     - left_column/callout_1
     - left_column/callout_2
 
