Update CES colors with new shade.

--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -67,9 +67,9 @@ $asbe-primary: #006185;
 $asbe-secondary: #276b87;
 $asbe-tertiary: #005270;
 
-$ces-primary: #008ec1;
-$ces-secondary: #2497c1;
-$ces-tertiary: #006e95;
+$ces-primary: #003764;
+$ces-secondary: #00457d;
+$ces-tertiary: #012746;
 
 $communication-primary: #c88508;
 $communication-secondary: #cb9126;
