Restores test settings for stories feed widget.

--- a/app/views/widgets/single_column/_chapman_stories_feed.html
+++ b/app/views/widgets/single_column/_chapman_stories_feed.html
@@ -1,6 +1,6 @@
 <div class="chapman-stories-feed-widget chapman-stories-feed-widget__medium-bg"
-     data-chapman-stories-feed-url=""
-     data-chapman-stories-top-story-url=""
+     data-chapman-stories-feed-url="https://blogs.chapman.edu/law"
+     data-chapman-stories-top-story-url="https://blogs.chapman.edu/law/2017/01/12/alumna-recognized-as-one-of-2016s-100-most-influential-people-in-orange-county/"
      data-chapman-stories-title="Chapman Stories Feed Widget"
      data-chapman-stories-bg-color=""
      data-chapman-stories-button-label="More Stories, Please!"
