added aria-label attribute to search drop down

--- a/app/views/widgets/shared/_omninav.html
+++ b/app/views/widgets/shared/_omninav.html
@@ -104,7 +104,7 @@
 
     <div id="cu_search">
     
-        <select class="search-type" id="search-type" name="search-type">
+        <select class="search-type" id="search-type" name="search-type" aria-label="search type">
             <option value="All">All</option>
             <option value="Blog Stories">Blog Stories</option>
             <option value="Faculty Directory">Faculty Directory</option>
