--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -75,7 +75,7 @@ $color-row-border:   #CCCCCC;
 
 
 // Background colors
-$bg-light-gray:      #ecebe5;
+$bg-light-gray:      #eaeaea;
 $bg-platinum-gray:   #e5e5e5;
 $bg-silver-gray:     #cfcfcf;
 $bg-off-white:       #f2f2f0;
