--- a/app/assets/stylesheets/omni_nav/helpers/mixins-and-variables.scss
+++ b/app/assets/stylesheets/omni_nav/helpers/mixins-and-variables.scss
@@ -95,8 +95,9 @@ $cu-red: #98002e;
 // $cu-red3: #98002E; // Old red replaced by $cu-red to keep colors standard
 $cu-dark-red: #851c2b;
 $cu-off-white: #f7f6f0;
-$cu-light-grey: #ECEBE5;
-$cu-warm-light-grey: #EDEADE;
+$cu-light-grey: #eaeaea;
+$cu-silver-grey: #cfcfcf;
+$cu-warm-light-grey: #eaeaea;
 $chapman-link-hover:  #407892;
 
 $white: #FFF;
