--- a/app/assets/stylesheets/components/icomoon.scss
+++ b/app/assets/stylesheets/components/icomoon.scss
@@ -9,6 +9,17 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'icomoon-ultimate';
+    src:font-url('icomoon-ultimate.eot');
+    src:font-url('icomoon-ultimate.eot?#iefix') format('embedded-opentype'),
+    font-url('icomoon-ultimate.woff') format('woff'),
+    font-url('icomoon-ultimate.ttf') format('truetype'),
+    font-url('icomoon-ultimate.svg#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /*
 Instead of a list of all class selectors,
 you can use the generic selector below, but it's slower:
@@ -25,9 +36,20 @@ you can use the generic selector below, but it's slower:
     -webkit-font-smoothing: antialiased;
 }
 
+.icon-menu7:before, .icon-arrow-down2:before, .icon-search:before, .icon-user3:before {
+    font-family: 'icomoon-ultimate';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+}
+
 /* Use the following CSS code if you want to use data attributes for inserting your icons */
 [data-icon]:before {
-    font-family: 'icomoon';
+    font-family: 'icomoon', 'icomoon-ultimate';
     content: attr(data-icon);
     speak: none;
     font-weight: normal;
@@ -251,3 +273,17 @@ you can use the generic selector below, but it's slower:
     content: "\e039";
 }
 
+//NEW AS OF 2/2017
+
+.icon-menu7:before {
+    content: "\ec71";
+}
+.icon-arrow-down2:before {
+    content: "\edc0";
+}
+.icon-search:before {
+    content: "\eb30";
+}
+.icon-user3:before {
+    content: "\eb08";
+}
