--- a/app/views/_cascade/templates/modular/one_column.html
+++ b/app/views/_cascade/templates/modular/one_column.html
@@ -39,7 +39,7 @@
     <div id="fb-root"></div>
 
     <div class="noscript">
-      <p>Some of the content on this website requires JavaScript to be enabled in your web browser to function as intended. This includes, but is not limited to: Flash (also requires the <a href="https://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash" target="_blank" title="Get Adobe Flash Player (link opens in a new browser window)">Adobe Flash Player</a>), navigation, video, image galleries, etc. While the website is still usable without JavaScript, it should be enabled to enjoy the full interactive experience.</p>
+      <p>Some of the content on this website requires JavaScript to be enabled in your web browser to function as intended. This includes, but is not limited to:navigation, video, image galleries, etc. While the website is still usable without JavaScript, it should be enabled to enjoy the full interactive experience.</p>
     </div>
 
     <div class="bigMasthead smallRotator" id="container">
