--- a/app/views/2_column/sample.html.erb
+++ b/app/views/2_column/sample.html.erb
@@ -19,6 +19,7 @@
     - primary_content/logo_image_rotator_1
     - primary_content/featured_news_events_feed_1
     - primary_content/wysiwyg_anchor_links
+    - primary_content/a_to_z_anchors
 
   left_column:
     - left_column/shared_content_contacts_1.html
