Adds section to reproduce issue #129 for personnel widget anchors.

--- a/app/views/2_column/sample.html.erb
+++ b/app/views/2_column/sample.html.erb
@@ -15,6 +15,7 @@
     - primary_content/funnel_2up_boxes_1
     - primary_content/wysiwyg_anchor_links
     - primary_content/a_to_z_anchors
+    - primary_content/personnel_anchors
     - primary_content/personnel_region_1
     - primary_content/personnel_region_2
     - primary_content/form_1
