--- a/app/views/widgets/primary_content/_a_to_z_anchors.html
+++ b/app/views/widgets/primary_content/_a_to_z_anchors.html
@@ -1,7 +1,8 @@
 <div id="a-z-anchors">
 
   <h2>A-Z Anchors</h2>
-  <p>This section was added to address this issue:
+  <p class="overview">
+    This section was added to address this issue:
     <a href="https://github.com/chapmanu/cascade-assets/issues/129" target="_blank">
       https://github.com/chapmanu/cascade-assets/issues/129
     </a>
