--- a/app/views/widgets/shared/_omninav.html
+++ b/app/views/widgets/shared/_omninav.html
@@ -5,7 +5,7 @@
     </a>
 
     <a class="cu-logo" href="http://www.chapman.edu/" title="Chapman.edu">
-        <span itemprop="name">Chapman University</span></a>
+        <span itemprop="name">Chapman University</span>
     </a>
     
     <div class="cu_nav_menu" id="cu_login_container">
