Fixes issue with a-z links for #129. Moves code that was in wysiwyg.js into global.js.

--- a/app/views/widgets/primary_content/_a_to_z_anchors.html
+++ b/app/views/widgets/primary_content/_a_to_z_anchors.html
@@ -36,7 +36,7 @@
     <h2 class="letter" id="Z">Z</h2>
     <ul>
       <li>
-
+        <a href="#a-z-anchors" title="Zzzzzz">Zzzzzz »</a>
       </li>
     </ul>
   </div>
