--- a/app/views/widgets/primary_content/_personnel_anchors.html
+++ b/app/views/widgets/primary_content/_personnel_anchors.html
@@ -8,13 +8,12 @@
     </a>
   </p>
 
-  <h3 class="personnel-anchors">
-    <a href="#personnel-anchor-jane">Jump to Jane</a>
-
-      ...or...
-
-    <a href="#personnel-anchor-john">Jump to John</a>
-  <h3>
+  <h3>Direct Links to Personnel Blocks</h3>
+  <p>Note: These buttons do not have jQuery events associated with them.</p>
+  <ul>
+    <li><a href="#personnel-anchor-jane">Jane's Link</a></li>
+    <li><a href="#personnel-anchor-john">John's Link</a></li>
+  </ul>
 
   <div class="personnel-listing-widget">
     <!-- anchor: these anchor tags are found in production -->
