--- a/app/views/widgets/primary_content/_wysiwyg_anchor_links.html
+++ b/app/views/widgets/primary_content/_wysiwyg_anchor_links.html
@@ -1,50 +1,51 @@
-<div class="wysiwyg-widget editableContent clearfix">
-  <div class="content">
-    <div class="a-z">
-      <h3 class="anchorLinks">
-        <a href="#A" name="top">A</a>&#160;&#160;<a href="#B">B</a>&#160;&#160;<a href="#C">C</a>
-      </h3>
+<div id="wysiwyg-anchors">
+
+<h2>WYSIWYG Anchors</h2>
+  <p class="overview">
+    This section was added to address this issue:
+    <a href="https://github.com/chapmanu/cascade-assets/issues/129" target="_blank">
+      https://github.com/chapmanu/cascade-assets/issues/129
+    </a>
+  </p>
+
+  <div class="wysiwyg-widget editableContent clearfix">
+    <div class="content">
+      <div class="a-z">
+        <h3 class="anchorLinks">
+          <a href="#B" name="top">B</a>&#160;&#160;<a href="#C">C</a>
+        </h3>
+      </div>
+      <p>Anchor points example</p>
+      <!-- Removed A not to conflict with a-z anchor widget. -->
+      <!-- B -->
+      <h2><a name="B"></a><strong>B</strong></h2>
+      <hr />
+      <p><b>B.C./B.C.E.</b> See <i><a href="#A.D./B.C">A.D./B.C</a>.</i></p>
+      <p><b>bachelor of arts, bachelor of science.</b> See <i><a href="#Academic degrees">Academic degrees</a>.</i></p>
+      <p><b>between/among. </b>See <i><a href="#Among/between">Among/between</a></i>.</p>
+      <p><b>biannual/biennial.</b> Biannual = Occurs twice a year. Biennial = Occurs once every two years (or every other year).</p>
+      <p><b><a href="#top">Return to top &#187;</a></b></p>
+      <p><b>&#160;</b></p>
+      <!-- C -->
+      <h2><b><a name="C"></a>C</b></h2>
+      <hr />
+      <p><b><a id="campus"></a>&#65279;campus.</b> Always lowercase unless it begins a sentence. Ex: <i>Chapman&#8217;s campus was named the third most beautiful campus in the nation</i>. Use Fowler campus or Rinker Health Science campus rather than main campus when appropriate.</p>
+      <p><b>center.</b> In all cases, lowercase center or institute when the word stands alone. See <a href="/research-and-institutions/index">www.chapman.edu/research-and-institutions</a>.</p>
+      <p><b>chair/chairman/chairwoman.</b> <i>Chair</i> is generally preferred as a title. Capitalize c<i>hair </i>when it precedes a name, but lowercase when it follows. Ex: <i>Board of Trustees</i> <i>Chair Raul Khan met with Ann Peterson, chair of the music department.</i></p>
+      <p><b>chair, endowed. </b>Capitalize chair when it is part of a formal endowed title. Ex: <i>Jack Cho held the Jerrold A. Glass Endowed Chair in Accounting and Economics at Chapman University.</i> See also <i><a href="#Named chair">Named chair</a>.</i></p>
+      <p><b>chancellor. </b>Capitalize before a name when used as a title, but lowercase after a name. Ex: <i>The event featured a speech by Chancellor Daniele Struppa. </i>Or<i> The event featured a speech by Daniele Struppa, chancellor of Chapman University</i>.</p>
+      <p><b>Chapel, Wallace All Faiths</b>.&#160;See&#160;<i><a href="https://mywindow.chapman.edu/depts/ua/Pages/Building-Name-Directory.aspx" target="_blank">Campus Naming Protocol</a></i></p>
+      <p><b>Chapman Family.&#160; </b>Capitalize <i>Family</i> when using this phrase.&#160; Chapman Family refers to the greater Chapman community, encompassing students, alumni, parents, family, staff, faculty and friends of the university, such as donors.&#160; Ex: <i>Alumni are valued members of the Chapman Family.</i></p>
+      <p><b><i>Chapman Magazine.</i> </b>Capitalize <i>Magazine</i> because it&#8217;s part of the official name of the publication.</p>
+      <p><b>Chapman University</b><b>. </b>On first reference, always include <i>University</i>. <i>Chapman</i> is acceptable on second reference. Capitalize <i>University</i> when used alone to refer to Chapman, but lowercase when referencing other schools. Ex: <i>Chapman University celebrated its 150<sup>th</sup> anniversary in 2011. Chapman traces its roots to Hesperian College. The University is growing in national prominence among all universities in the U.S.</i></p>
+      <p><b>Cheverton Award</b><b>.</b> Given annually to the outstanding graduating senior at Chapman University. Named for Cecil F. Cheverton, president of Chapman from 1929-1941.</p>
+      <p><b>Church, Christian (Disciples of Christ)</b><b>.</b> See <i><a href="#Disciples of Christ">Disciples of Christ</a>.</i></p>
+      <p><b><a name="class year"></a>class year.</b> Include a class year whenever alumni are mentioned. Make sure the apostrophe is facing the correct way. Ex: <i>Students listened to Abe Chapman &#8217;98 and to Bea Chapman &#8217;99 (M.A. &#8217;02)</i>. Couples: <i>Dee Chapman &#8217;02 (M.A. &#8217;06) and Effie Chapman &#8217;98</i>. If a person attended Chapman but did not graduate, he or she is listed as <i>Class of</i> [year they would have graduated]. Ex: <i>Fred Chapman, Class of &#8217;68.</i> For current students, it is preferable to use the student&#8217;s projected graduation year. Ex: <i>The award this year went to GiGi Chapman &#8217;20. </i></p>
+      <p><b>College of Educational Studies.</b><i> </i>See <i><a href="#Colleges and schools">Colleges and schools</a>.</i></p>
+      <p><b>College of Performing Arts. </b>See <i><a href="#Colleges and schools">Colleges and schools</a>.</i></p>
+      <p><b><a href="#top">Return to top &#187;</a></b></p>
+      <p><b>&#160;</b></p>
     </div>
-    <p>Anchor points example</p>
-    <!-- A -->
-    <h2><a name="A"></a><strong>A</strong></h2>
-    <p><b><a name="Academic degrees"></a>academic degrees</b><b>.</b> See also <i><a href="#Titles">Titles</a>.</i></p>
-    <hr />
-    <ul>
-      <li>Spell out the long name of the degree. When spelling out, use lowercase: bachelor of arts, bachelor&#8217;s degree, master of arts, master&#8217;s degree, doctorate, doctoral degree. Ex: <i>She has her master of arts degree in biochemistry. He has a doctorate in American literature.</i></li>
-      <li>After a name, abbreviate degrees using uppercase letters with periods: B.A., B.S., M.A., M.S., Ph.D., Ed.D., or D.Pharm. Note there are no periods in MBA, MFA, DPT or in JD. When used after a name, an academic abbreviation is set off by commas. Ex: <i>John Snow, Ph.D., spoke at the conference.</i></li>
-      <li>Do not precede a name with a title for an academic degree followed by<i> </i>the abbreviation for the degree in the same reference. Wrong: <i>Dr. John Snow, Ph.D., spoke at the conference.</i></li>
-      <li>Honorary degrees: All references to honorary degrees should specify that the degree was honorary.&#160;</li>
-    </ul>
-    <p><b><a href="#top">Return to top &#187;</a></b></p>
-    <p><b>&#160;</b></p>
-    <!-- B -->
-    <h2><a name="B"></a><strong>B</strong></h2>
-    <hr />
-    <p><b>B.C./B.C.E.</b> See <i><a href="#A.D./B.C">A.D./B.C</a>.</i></p>
-    <p><b>bachelor of arts, bachelor of science.</b> See <i><a href="#Academic degrees">Academic degrees</a>.</i></p>
-    <p><b>between/among. </b>See <i><a href="#Among/between">Among/between</a></i>.</p>
-    <p><b>biannual/biennial.</b> Biannual = Occurs twice a year. Biennial = Occurs once every two years (or every other year).</p>
-    <p><b><a href="#top">Return to top &#187;</a></b></p>
-    <p><b>&#160;</b></p>
-    <!-- C -->
-    <h2><b><a name="C"></a>C</b></h2>
-    <hr />
-    <p><b><a id="campus"></a>&#65279;campus.</b> Always lowercase unless it begins a sentence. Ex: <i>Chapman&#8217;s campus was named the third most beautiful campus in the nation</i>. Use Fowler campus or Rinker Health Science campus rather than main campus when appropriate.</p>
-    <p><b>center.</b> In all cases, lowercase center or institute when the word stands alone. See <a href="/research-and-institutions/index">www.chapman.edu/research-and-institutions</a>.</p>
-    <p><b>chair/chairman/chairwoman.</b> <i>Chair</i> is generally preferred as a title. Capitalize c<i>hair </i>when it precedes a name, but lowercase when it follows. Ex: <i>Board of Trustees</i> <i>Chair Raul Khan met with Ann Peterson, chair of the music department.</i></p>
-    <p><b>chair, endowed. </b>Capitalize chair when it is part of a formal endowed title. Ex: <i>Jack Cho held the Jerrold A. Glass Endowed Chair in Accounting and Economics at Chapman University.</i> See also <i><a href="#Named chair">Named chair</a>.</i></p>
-    <p><b>chancellor. </b>Capitalize before a name when used as a title, but lowercase after a name. Ex: <i>The event featured a speech by Chancellor Daniele Struppa. </i>Or<i> The event featured a speech by Daniele Struppa, chancellor of Chapman University</i>.</p>
-    <p><b>Chapel, Wallace All Faiths</b>.&#160;See&#160;<i><a href="https://mywindow.chapman.edu/depts/ua/Pages/Building-Name-Directory.aspx" target="_blank">Campus Naming Protocol</a></i></p>
-    <p><b>Chapman Family.&#160; </b>Capitalize <i>Family</i> when using this phrase.&#160; Chapman Family refers to the greater Chapman community, encompassing students, alumni, parents, family, staff, faculty and friends of the university, such as donors.&#160; Ex: <i>Alumni are valued members of the Chapman Family.</i></p>
-    <p><b><i>Chapman Magazine.</i> </b>Capitalize <i>Magazine</i> because it&#8217;s part of the official name of the publication.</p>
-    <p><b>Chapman University</b><b>. </b>On first reference, always include <i>University</i>. <i>Chapman</i> is acceptable on second reference. Capitalize <i>University</i> when used alone to refer to Chapman, but lowercase when referencing other schools. Ex: <i>Chapman University celebrated its 150<sup>th</sup> anniversary in 2011. Chapman traces its roots to Hesperian College. The University is growing in national prominence among all universities in the U.S.</i></p>
-    <p><b>Cheverton Award</b><b>.</b> Given annually to the outstanding graduating senior at Chapman University. Named for Cecil F. Cheverton, president of Chapman from 1929-1941.</p>
-    <p><b>Church, Christian (Disciples of Christ)</b><b>.</b> See <i><a href="#Disciples of Christ">Disciples of Christ</a>.</i></p>
-    <p><b><a name="class year"></a>class year.</b> Include a class year whenever alumni are mentioned. Make sure the apostrophe is facing the correct way. Ex: <i>Students listened to Abe Chapman &#8217;98 and to Bea Chapman &#8217;99 (M.A. &#8217;02)</i>. Couples: <i>Dee Chapman &#8217;02 (M.A. &#8217;06) and Effie Chapman &#8217;98</i>. If a person attended Chapman but did not graduate, he or she is listed as <i>Class of</i> [year they would have graduated]. Ex: <i>Fred Chapman, Class of &#8217;68.</i> For current students, it is preferable to use the student&#8217;s projected graduation year. Ex: <i>The award this year went to GiGi Chapman &#8217;20. </i></p>
-    <p><b>College of Educational Studies.</b><i> </i>See <i><a href="#Colleges and schools">Colleges and schools</a>.</i></p>
-    <p><b>College of Performing Arts. </b>See <i><a href="#Colleges and schools">Colleges and schools</a>.</i></p>
-    <p><b><a href="#top">Return to top &#187;</a></b></p>
-    <p><b>&#160;</b></p>
   </div>
+
 </div>
