Replaced CU logo on off-canvas-nav with SVG

--- a/app/views/widgets/shared/_omninav.html
+++ b/app/views/widgets/shared/_omninav.html
@@ -145,9 +145,9 @@
         <div class="cu-off-canvas-header">
             
                             
-                <a href="/" title="Link to Chapman University Homepage">
-                    <img alt="Chapman University Logo" src="//www.chapman.edu/_files/img/off-canvas-header-default.png"/>
-                </a>
+            <a href="/" class="cu-off-canvas-logo" title="Link to Chapman University Homepage">
+                <span itemprop="name">Chapman University</span>
+            </a>
             
             
             <span class="close" id="js-cu-close-off-canvas-nav">X</span>
