--- a/app/assets/stylesheets/omni_nav/modules/off-canvas-nav.scss
+++ b/app/assets/stylesheets/omni_nav/modules/off-canvas-nav.scss
@@ -117,7 +117,7 @@
 				padding: 0 70px 0 1.25em;
 				position: relative;
 				font-size: 18px;
-				font-family: "proxima-nova-soft", "proxima-nova-soft-n4", sans-serif;
+				font-family: "futura-pt", sans-serif;
 
 				&.has-icon {
 					padding: 0 70px 0 2.75em;
@@ -292,6 +292,63 @@
 			height: 28px;
 			width: 273px;
 			margin: 0;
+		}
+	}
+
+	.cu-off-canvas-college {
+		display: block;
+		border: 0;
+		height: 23px;
+		width: 200px;
+		text-indent: -998em;
+		margin: 2px 0 0 0;
+		background-repeat: no-repeat;
+		background-size: contain;
+
+		@include bp(m) {
+			height: 28px;
+			width: 273px;
+			margin: 0;
+		}
+		.asbe {
+			background: image-url('off-canvas-header-asbe.png'); // IE 8
+			background: image-url('off-canvas-header-asbe.svg'), linear-gradient(transparent, transparent);
+		}
+		.ces {
+			background: image-url('off-canvas-header-ces.png'); // IE 8
+			background: image-url('off-canvas-header-ces.svg'), linear-gradient(transparent, transparent);
+		}
+		.dodge {
+			background: image-url('off-canvas-header-dodge.png'); // IE 8
+			background: image-url('off-canvas-header-dodge.svg'), linear-gradient(transparent, transparent);
+		}
+		.crean {
+			background: image-url('off-canvas-header-crean.png'); // IE 8
+			background: image-url('off-canvas-header-crean.svg'), linear-gradient(transparent, transparent);
+		}
+		.wilkinson {
+			background: image-url('off-canvas-header-wilkinson.png'); // IE 8
+			background: image-url('off-canvas-header-wilkinson.svg'), linear-gradient(transparent, transparent);
+		}
+		.copa {
+			background: image-url('off-canvas-header-copa.png'); // IE 8
+			background: image-url('off-canvas-header-copa.svg'), linear-gradient(transparent, transparent);
+		}
+		.cusp {
+			background: image-url('off-canvas-header-cusp.png'); // IE 8
+			background: image-url('off-canvas-header-cusp.svg'), linear-gradient(transparent, transparent);
+		}
+		.fowler {
+			background: image-url('off-canvas-header-fowler.png'); // IE 8
+			background: image-url('off-canvas-header-fowler.svg'), linear-gradient(transparent, transparent);
+		}
+		.schmid {
+			background: image-url('off-canvas-header-schmid.png'); // IE 8
+			background: image-url('off-canvas-header-schmid.svg'), linear-gradient(transparent, transparent);
+		}
+		.soc {
+			background: image-url('off-canvas-header-soc.png'); // IE 8
+			background: image-url('off-canvas-header-soc.svg'), linear-gradient(transparent, transparent);
 		}
 	}
 
