Correct anchor link color for ADA compliance, per Ross.

--- a/app/views/widgets/primary_content/_carousel_1.html
+++ b/app/views/widgets/primary_content/_carousel_1.html
@@ -4,7 +4,7 @@
         <blockquote data-img="data-img" data-src="<%= image_path 'placeholder/chapman.jpg' %>">&#160;</blockquote>
         <figcaption>
             <h2><headline>Chapman University</headline></h2>
-            <span>In 1972 a crack commando unit was sent to prison by a military court for a crime they didn't commit. These men promptly escaped from a maximum security stockade to the Los Angeles underground. But they got diff'rent strokes. It takes diff'rent strokes - it takes diff'rent strokes to move the world. In 1972 a crack commando unit was sent to prison by a military court for a crime they didn't commit.&#160;</span>
+            <span>In 1972 a crack commando unit <a href="#">was sent to prison</a> by a military court for a crime they didn't commit. These men promptly escaped from a maximum security stockade to the Los Angeles underground. But they got diff'rent strokes. It takes diff'rent strokes - it takes diff'rent strokes to move the world. In 1972 a crack commando unit was sent to prison by a military court for a crime they didn't commit.&#160;</span>
         </figcaption>
     </figure>
     <p>Carousel Image here</p>
