--- a/app/assets/stylesheets/widgets/primary_column/carousel.scss
+++ b/app/assets/stylesheets/widgets/primary_column/carousel.scss
@@ -30,6 +30,10 @@
   }
 }
 
+.carousel-widget a  {
+  color: $white; 
+}
+
 .carousel-widget a.carousel-prevnext  {
   border: none;
   outline: none;
@@ -232,12 +236,13 @@
     color: #F9F9F9;
   }
   h2 {
+    font-family: $font-stack-body; 
     border: 0 solid;
     -moz-box-sizing: border-box;
     box-sizing: inherit;
     color: inherit;
     font-size: inherit;
-    margin: 0;
+    margin: 0 0 10px 0;
     padding: 0;
     text-decoration: none;
     vertical-align: inherit;
