Added new SVG/png background for all colleges and default CU logo on Off Canvas Nav

--- a/app/assets/stylesheets/omni_nav/modules/off-canvas-nav.scss
+++ b/app/assets/stylesheets/omni_nav/modules/off-canvas-nav.scss
@@ -276,104 +276,110 @@
 	// padding: 1.5em 1.8em 0.5em 1.5em; // Client request - BarkleyREI
 	padding: 1.5em 1.8em 0 1.5em; // 20170210 - CU Build
 
-	.cu-off-canvas-logo {
-		display: block;
-		border: 0;
-		height: 23px;
-		width: 200px;
-		text-indent: -998em;
-		margin: 2px 0 0 0;
-		background: image-url('chapman_logo_horizontal_color.png'); // IE 8
-		background: image-url('chapman_logo_horizontal_color.svg'), linear-gradient(transparent, transparent);
+	
+	.asbe {
+		background: image-url('off-canvas-header-asbe.png'); // IE 8
+		background: image-url('off-canvas-header-asbe.svg'), linear-gradient(transparent, transparent);
 		background-repeat: no-repeat;
 		background-size: contain;
-
-		@include bp(m) {
-			height: 28px;
-			width: 273px;
-			margin: 0;
-		}
 	}
-
-	.cu-off-canvas-college {
-		display: block;
-		border: 0;
-		height: 23px;
-		width: 200px;
-		text-indent: -998em;
-		margin: 2px 0 0 0;
+	.ces {
+		background: image-url('off-canvas-header-ces.png'); // IE 8
+		background: image-url('off-canvas-header-ces.svg'), linear-gradient(transparent, transparent);
 		background-repeat: no-repeat;
 		background-size: contain;
-
-		@include bp(m) {
-			height: 28px;
-			width: 273px;
-			margin: 0;
-		}
-		.asbe {
-			background: image-url('off-canvas-header-asbe.png'); // IE 8
-			background: image-url('off-canvas-header-asbe.svg'), linear-gradient(transparent, transparent);
-		}
-		.ces {
-			background: image-url('off-canvas-header-ces.png'); // IE 8
-			background: image-url('off-canvas-header-ces.svg'), linear-gradient(transparent, transparent);
-		}
-		.dodge {
-			background: image-url('off-canvas-header-dodge.png'); // IE 8
-			background: image-url('off-canvas-header-dodge.svg'), linear-gradient(transparent, transparent);
-		}
-		.crean {
-			background: image-url('off-canvas-header-crean.png'); // IE 8
-			background: image-url('off-canvas-header-crean.svg'), linear-gradient(transparent, transparent);
-		}
-		.wilkinson {
-			background: image-url('off-canvas-header-wilkinson.png'); // IE 8
-			background: image-url('off-canvas-header-wilkinson.svg'), linear-gradient(transparent, transparent);
-		}
-		.copa {
-			background: image-url('off-canvas-header-copa.png'); // IE 8
-			background: image-url('off-canvas-header-copa.svg'), linear-gradient(transparent, transparent);
-		}
-		.cusp {
-			background: image-url('off-canvas-header-cusp.png'); // IE 8
-			background: image-url('off-canvas-header-cusp.svg'), linear-gradient(transparent, transparent);
-		}
-		.fowler {
-			background: image-url('off-canvas-header-fowler.png'); // IE 8
-			background: image-url('off-canvas-header-fowler.svg'), linear-gradient(transparent, transparent);
-		}
-		.schmid {
-			background: image-url('off-canvas-header-schmid.png'); // IE 8
-			background: image-url('off-canvas-header-schmid.svg'), linear-gradient(transparent, transparent);
-		}
-		.soc {
-			background: image-url('off-canvas-header-soc.png'); // IE 8
-			background: image-url('off-canvas-header-soc.svg'), linear-gradient(transparent, transparent);
-		}
 	}
-
+	.dodge {
+		background: image-url('off-canvas-header-dodge.png'); // IE 8
+		background: image-url('off-canvas-header-dodge.svg'), linear-gradient(transparent, transparent);
+		background-repeat: no-repeat;
+		background-size: contain;
+	}
+	.crean {
+		background: image-url('off-canvas-header-crean.png'); // IE 8
+		background: image-url('off-canvas-header-crean.svg'), linear-gradient(transparent, transparent);
+		background-repeat: no-repeat;
+		background-size: contain;
+	}
+	.wilkinson {
+		background: image-url('off-canvas-header-wilkinson.png'); // IE 8
+		background: image-url('off-canvas-header-wilkinson.svg'), linear-gradient(transparent, transparent);
+		background-repeat: no-repeat;
+		background-size: contain;
+	}
+	.copa {
+		background: image-url('off-canvas-header-copa.png'); // IE 8
+		background: image-url('off-canvas-header-copa.svg'), linear-gradient(transparent, transparent);
+		background-repeat: no-repeat;
+		background-size: contain;
+	}
+	.cusp {
+		background: image-url('off-canvas-header-cusp.png'); // IE 8
+		background: image-url('off-canvas-header-cusp.svg'), linear-gradient(transparent, transparent);
+		background-repeat: no-repeat;
+		background-size: contain;
+	}
+	.fowler {
+		background: image-url('off-canvas-header-fowler.png'); // IE 8
+		background: image-url('off-canvas-header-fowler.svg'), linear-gradient(transparent, transparent);
+		background-repeat: no-repeat;
+		background-size: contain;
+	}
+	.schmid {
+		background: image-url('off-canvas-header-schmid.png'); // IE 8
+		background: image-url('off-canvas-header-schmid.svg'), linear-gradient(transparent, transparent);
+		background-repeat: no-repeat;
+		background-size: contain;
+	}
+	.soc {
+		background: image-url('off-canvas-header-soc.png'); // IE 8
+		background: image-url('off-canvas-header-soc.svg'), linear-gradient(transparent, transparent);
+		background-repeat: no-repeat;
+		background-size: contain;
+	}
+	
 	.sc-logo {
 		display: block;
-
+		height: 23px; 
+		width: 200px;
+		border: 0;
+		text-indent: -998em;
+		margin: 2px 0 0 0;
+		
+		@include bp(m) {
+			height: 28px;
+			width: 273px;
+			margin: 0;
+		}
 		.shifted & {
 			display: none;
 		}
-
 	}
+
 
 	.default-logo {
 		display: none;
-
-		.shifted & {
+		
+		.shifted & , &-cu {
 			display: block;
+			border: 0;
+			height: 23px;
+			width: 200px;
+			text-indent: -998em;
+			margin: 2px 0 0 0;
+			background: image-url('chapman_logo_horizontal_color.png'); // IE 8
+			background: image-url('chapman_logo_horizontal_color.svg'), linear-gradient(transparent, transparent);
+			background-repeat: no-repeat;
+			background-size: contain;
+
+			@include bp(m) {
+				height: 28px;
+				width: 273px;
+				margin: 0;
+			}
 		}
-
 	}
 
-	img {
-		max-width: 87.5%;
-		max-height: 29px;
-	}
 
 	.close {
 		cursor: pointer;
