--- a/app/views/widgets/shared/_omninav.html
+++ b/app/views/widgets/shared/_omninav.html
@@ -144,11 +144,14 @@
 
         <div class="cu-off-canvas-header">
             
-                            
-            <a href="/" class="cu-off-canvas-logo" title="Link to Chapman University Homepage">
+              
+            <a href="/" class="sc-logo" title="Link to Chapman University Homepage">
                 <span itemprop="name">Chapman University</span>
             </a>
-            
+                            
+            <a href="/" class="default-logo-cu" title="Link to Chapman University Homepage">
+                <span itemprop="name">Chapman University</span>
+            </a>
             
             <span class="close" id="js-cu-close-off-canvas-nav">X</span>
 
