Commit change to test

--- a/app/views/widgets/shared/_omninav.html
+++ b/app/views/widgets/shared/_omninav.html
@@ -149,9 +149,9 @@
                 <span itemprop="name">Chapman University</span>
             </a>
                             
-            <!-- <a href="/" class="default-logo-cu" title="Link to Chapman University Homepage">
+            <a href="/" class="default-logo" title="Link to Chapman University Homepage">
                 <span itemprop="name">Chapman University</span>
-            </a> -->
+            </a>
             
             <span class="close" id="js-cu-close-off-canvas-nav">X</span>
 
